property container alignment fixed

--- a/src/static/styles/container.css
+++ b/src/static/styles/container.css
@@ -32,6 +32,10 @@
     margin: .5em;
 }
 
+.margin-left-3 {
+    margin-left: 4em;
+}
+
 .align-left{
     justify-items: left;
     text-align: left;
